using System.Collections;
using System.Collections.Generic;
using UnityEngine;

public class Constant 
{
    public const string TAG_CHARACTER = "Character";
    public const string TAG_BULLET = "Bullet";
    public const string TAG_Player = "Player";
}
public class Anim
{
    public const string ANIM_ATTACK = "Attack";
    public const string ANIM_IDLE = "Idle";
    public const string ANIM_RUN = "Run";
    public const string ANIM_DAED = "Dead";
    public const string ANIM_DANCE = "Dance";
    public const string ANIM_Win = "Win";
}
public class Level
{
    public const string Map = "Map/Map";
}